--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="navbar">
                 <nav class="nav_list">
                     <a href="#">
-                        <img src="/img/Frame_google.png" alt="">
+                        <img src="img/Frame_google.png" alt="">
                     </a>
                     <a href="#4">Phones</a>
                     <a href="#1">Earbuds</a>
@@ -45,16 +45,16 @@
 
                 <nav class="nav_icons">
                     <a href="#">
-                        <img src="/img/Frame_search.png" alt="">
+                        <img src="img/Frame_search.png" alt="">
                     </a>
                     <a href="#">
-                    <img src="/img/Frame_question.png" alt="">    
+                    <img src="img/Frame_question.png" alt="">    
                     </a>
                     <a href="#">
-                        <img src="/img/Frame_cart.png" alt="">
+                        <img src="img/Frame_cart.png" alt="">
                     </a>
                     <a href="#">
-                        <img src="/img/Frame_user.png" alt="">
+                        <img src="img/Frame_user.png" alt="">
                     </a>
                 </nav>
             </div>
@@ -75,7 +75,7 @@
             <div class="products-list">
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Google Pixel Watch.jpg" alt="Google Pixel Watch">    
+                    <img src="img/Google Pixel Watch.jpg" alt="Google Pixel Watch">    
                     <div class="product_a">
                         <a href="#">Google Pixel Watch</a>
                     </div>
@@ -83,7 +83,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Pixel 7 Pro.jpg" alt="Pixel 7 Pro">    
+                    <img src="img/Pixel 7 Pro.jpg" alt="Pixel 7 Pro">    
                     <div class="product_a">
                         <a href="#">Pixel 7 Pro</a>
                     </div>
@@ -91,14 +91,14 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Pixel 7.jpg" alt="Pixel 7">    
+                    <img src="img/Pixel 7.jpg" alt="Pixel 7">    
                     <div class="product_a">
                         <a href="#">Pixel 7</a>
                     </div>
                 </div>
 
                 <div class="product">
-                    <img src="/img/Pixel Buds Pro.jpg" alt="Pixel Buds Pro">    
+                    <img src="img/Pixel Buds Pro.jpg" alt="Pixel Buds Pro">    
                     <div class="product_a">
                         <a href="#">Pixel Buds Pro</a>
                     </div>
@@ -106,7 +106,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Nest Doorbells.jpg" alt="Nest Doorbells">    
+                    <img src="img/Nest Doorbells.jpg" alt="Nest Doorbells">    
                     <div class="product_a">
                         <a href="#">Nest Doorbells</a>
                     </div>
@@ -114,7 +114,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Nest Wifi Pro.jpg" alt="Nest Wifi Pro">    
+                    <img src="img/Nest Wifi Pro.jpg" alt="Nest Wifi Pro">    
                     <div class="product_a">
                         <a href="#">Nest Wifi Pro</a>
                     </div>
@@ -122,7 +122,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Google Pixel Watch.jpg" alt="Google Pixel Watch">    
+                    <img src="img/Google Pixel Watch.jpg" alt="Google Pixel Watch">    
                     <div class="product_a">
                         <a href="#">Google Pixel Watch</a>
                     </div>
@@ -130,7 +130,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Pixel 7 Pro.jpg" alt="Pixel 7 Pro">    
+                    <img src="img/Pixel 7 Pro.jpg" alt="Pixel 7 Pro">    
                     <div class="product_a">
                         <a href="#">Pixel 7 Pro</a>
                     </div>
@@ -138,14 +138,14 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Pixel 7.jpg" alt="Pixel 7">    
+                    <img src="img/Pixel 7.jpg" alt="Pixel 7">    
                     <div class="product_a">
                         <a href="#">Pixel 7</a>
                     </div>
                 </div>
 
                 <div class="product">
-                    <img src="/img/Pixel Buds Pro.jpg" alt="Pixel Buds Pro">    
+                    <img src="img/Pixel Buds Pro.jpg" alt="Pixel Buds Pro">    
                     <div class="product_a">
                         <a href="#">Pixel Buds Pro</a>
                     </div>
@@ -153,7 +153,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Nest Doorbells.jpg" alt="Nest Doorbells">    
+                    <img src="img/Nest Doorbells.jpg" alt="Nest Doorbells">    
                     <div class="product_a">
                         <a href="#">Nest Doorbells</a>
                     </div>
@@ -161,7 +161,7 @@
 
                 <div class="product">
                     <p class="new">New</p>
-                    <img src="/img/Nest Wifi Pro.jpg" alt="Nest Wifi Pro">    
+                    <img src="img/Nest Wifi Pro.jpg" alt="Nest Wifi Pro">    
                     <div class="product_a">
                         <a href="#">Nest Wifi Pro</a>
                     </div>
@@ -174,7 +174,7 @@
 
         <section class="google_pixel">
             <div class="google_pixel_div">
-                <img src="/img/NBA ball.jpg" alt="NBA foundation. Google Pixel.">
+                <img src="img/NBA ball.jpg" alt="NBA foundation. Google Pixel.">
             </div>
             <div class="google_pixel_div">
                 <h2>
@@ -204,7 +204,7 @@
                         Learn more
                     </a>
                 </div>
-                <img src="/img/Fitbit watch.png" alt="Google pixel watch">
+                <img src="img/Fitbit watch.png" alt="Google pixel watch">
             </div>
 
             <div class="section_4_div">
@@ -221,7 +221,7 @@
                         Learn more
                     </a>
                 </div>
-                <img src="/img/Wi-Fi Nest.png" alt="Nest Wifi Pro with Wi-Fi 6E">
+                <img src="img/Wi-Fi Nest.png" alt="Nest Wifi Pro with Wi-Fi 6E">
             </div>
 
             <div class="section_4_div">
@@ -238,7 +238,7 @@
                         Learn more
                     </a>
                 </div>
-                <img src="/img/Doorbell Nest.png" alt="Nest Doorbell (wired)">
+                <img src="img/Doorbell Nest.png" alt="Nest Doorbell (wired)">
             </div>
         </section>
 
@@ -259,7 +259,7 @@
                         Learn more
                     </a>
                 </div>
-                <img src="/img/Pixel Pass.jpg" alt="Pixel Pass">
+                <img src="img/Pixel Pass.jpg" alt="Pixel Pass">
             </div>
 
             <div class="section_5_div">
@@ -278,7 +278,7 @@
                         Learn more
                     </a>
                 </div>
-                <img src="/img/Switch to Pixel.jpg" alt="Switch to Pixel">
+                <img src="img/Switch to Pixel.jpg" alt="Switch to Pixel">
             </div>
         </section>
 
@@ -290,28 +290,28 @@
             </h2>
             <div class="categories">
                 <div class="category">
-                    <img src="/img/cameras.jpg" alt="Cameras">
+                    <img src="img/cameras.jpg" alt="Cameras">
                     <div>
                         <a href="#">Cameras</a>
                     </div>
                 </div>
 
                 <div class="category">
-                    <img src="/img/doorbells.jpg" alt="Doorbells">
+                    <img src="img/doorbells.jpg" alt="Doorbells">
                     <div>
                         <a href="#">Doorbells</a>
                     </div>
                 </div>
 
                 <div class="category">
-                    <img src="/img/streaming.jpg" alt="Streaming">
+                    <img src="img/streaming.jpg" alt="Streaming">
                     <div>
                         <a href="#">Streaming</a>
                     </div>
                 </div>
 
                 <div class="category">
-                    <img src="/img/packages.jpg" alt="Packages">
+                    <img src="img/packages.jpg" alt="Packages">
                     <div>
                         <a href="#">Packages</a>
                     </div>
@@ -334,7 +334,7 @@
                 <div>
                     <a href="#">Explore watches</a>
                 </div>
-                <img src="/img/Watches.jpg" alt="Watches">
+                <img src="img/Watches.jpg" alt="Watches">
             </div>
 
             <div class="explore_div">
@@ -349,7 +349,7 @@
                 <div>
                     <a href="#">Explore earbuds</a>
                 </div>
-                <img src="/img/Earbuds.jpg" alt="Earbuds">
+                <img src="img/Earbuds.jpg" alt="Earbuds">
             </div>
         </section>
 
@@ -357,7 +357,7 @@
 
         <section class="section_8">
             <div>
-                <img src="/img/sustainability.jpg" alt="Putting sustainability to work.">
+                <img src="img/sustainability.jpg" alt="Putting sustainability to work.">
             </div>
             <div class="section_8_div">
                 <h4>
@@ -379,24 +379,24 @@
         <footer>
             <div class="footer_icons">
                 <a href="#">
-                    <img src="/img/twitter.png" alt="">
+                    <img src="img/twitter.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="/img/instagram.png" alt="">
+                    <img src="img/instagram.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="/img/facebook.png" alt="">
+                    <img src="img/facebook.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="/img/youtube.png" alt="">
+                    <img src="img/youtube.png" alt="">
                 </a>
                 <a href="#">
-                    <img src="/img/tiktok.png" alt="">
+                    <img src="img/tiktok.png" alt="">
                 </a>
             </div>
 
             <div class="footer_links">
-                <img src="/img/USA.png" alt="">
+                <img src="img/USA.png" alt="">
                 <div class="footer_links_div">
                     <a href="#1">United States</a>
             
